--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body class="is-preload">
 
+
 <header>
     <nav id="nav">
         <ul class="container">
-            <li><a href="#top">Top</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#top">Обо мне</a></li>
+            <li><a href="#work">Работы</a></li>
+            <li><a href="#portfolio">Портфолио</a></li>
+            <li><a href="#contact">Контакты</a></li>
         </ul>
     </nav>
 </header>
+
 <!-- Home -->
 <article id="top" class="wrapper style1">
     <div class="container">
@@ -27,13 +29,11 @@
             </div>
             <div class="col-8 col-7-large col-12-medium">
                 <header>
-                    <h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+                    <h1>Привет! Я <strong>Шилов Геннадий</strong>.</h1>
                 </header>
-                <p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a
-                        href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp;
-                    released under the <a href="http://html5up.net/license">CCA license</a>.</p>
-                <a href="#work" class="button large scrolly">Learn about what I do</a>
-                <a href="#work" class="button large scrolly">Learn about what I do</a>
+                <p>Я опытный SEO-специалист, продвинувший множество сайтов и товаров на маркетплейсах.</p>
+                <a href="#work" class="button large scrolly">Получить расчет</a>
+                <a href="#work" class="button large scrolly">Связаться</a>
             </div>
         </div>
     </div>
@@ -174,7 +174,6 @@
         <footer>
             <ul id="copyright">
                 <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </footer>
     </div>
