--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 </article>
 
 <!-- Work -->
-<article id="work" class="wrapper style2">
+<article id="achievements" class="wrapper style2">
     <div class="container">
         <header>
-            <h2>Here's all the stuff I do.</h2>
+            <h2>Мои достижения</h2>
             <p>Odio turpis amet sed consequat eget posuere consequat.</p>
         </header>
         <div class="row aln-center">
@@ -78,6 +78,346 @@
         </footer>
     </div>
 </article>
+
+<article id="cases" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Кейсы</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="SEO" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Почему SEO?</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="steps" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Шаги работы:</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="advantages" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Преимущества</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="privacy" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Гарантируем конфединциальность!</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="price" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Прайслист:</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+
+<article id="event" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Акция</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<article id="questions" class="wrapper style2">
+    <div class="container">
+        <header>
+            <h2>Остались вопросы?</h2>
+            <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+        </header>
+        <div class="row aln-center">
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-comments"></span>
+                    <h3>Consequat lorem</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon solid featured fa-camera-retro"></span>
+                    <h3>Lorem dolor tempus</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+            <div class="col-4 col-6-medium col-12-small">
+                <section class="box style1">
+                    <span class="icon featured fa-thumbs-up"></span>
+                    <h3>Feugiat posuere</h3>
+                    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
+                        dolore.</p>
+                </section>
+            </div>
+        </div>
+        <footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+        </footer>
+    </div>
+</article>
+
+<div class="pic alt container">
+    <section class="card left">
+        <a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt=""/></a>
+        <div class="pic-card">
+            <h3>The First Thing</h3>
+            <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat
+                mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+        </div>
+    </section>
+    <section class="card right">
+        <a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt=""/></a>
+        <div class="pic-card">
+            <h3>The Second Thing</h3>
+            <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat
+                mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+        </div>
+    </section>
+    <section class="card left">
+        <a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt=""/></a>
+        <div class="pic-card">
+            <h3>The Third Thing</h3>
+            <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat
+                mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+        </div>
+    </section>
+</div>
 
 <!-- Portfolio -->
 <article id="portfolio" class="wrapper style3">
