--- a/index.html
+++ b/index.html
@@ -546,6 +546,15 @@
 
 Что нужно в первую очередь?- анализ ситуации- проработать сео- план работ по продвижению- напишу самТекущая ситуация,
 постановка задачи ( textarea)
+
+Контакты
+
+SEO продвижение WB OZON
+https://t.me/shilgen_seo
+
+Канал SEO продвижение для WB и OZON
+SEO продвижение для WB и OZON
+https://t.me/seo_up
 -->
 
 <footer>
@@ -594,7 +603,7 @@
                                        pattern="\d+|https?://[^\s/$.?#].[^\s]*" required>
                             </div>
                             <div class="col-12">
-                                <textarea name="message" id="message" placeholder="Что нужно в первую очередь? &#10; -Анализ ситуации? &#10; -Проработать сео? &#10; -План работ по продвижению?"></textarea>
+                                <textarea name="message" id="message" placeholder="Что нужно в первую очередь? &#10; -Анализ ситуации? &#10; -Проработать сео? &#10; -План работ по продвижению? &#10; - Напишу сам"></textarea>
                             </div>
                             <div class="col-12">
                                 <a href="#contact" class="button large scrolly">Отправить</a>
