--- a/index.html
+++ b/index.html
@@ -603,7 +603,11 @@ https://t.me/seo_up
                                        pattern="\d+|https?://[^\s/$.?#].[^\s]*" required>
                             </div>
                             <div class="col-12">
-                                <textarea name="message" id="message" placeholder="Что нужно в первую очередь? &#10; -Анализ ситуации? &#10; -Проработать сео? &#10; -План работ по продвижению? &#10; - Напишу сам"></textarea>
+                                <label for="message" class="left-label">Что нужно в первую очередь? <br> - Анализ ситуации?
+                                    <br> - Проработать сео?
+                                    <br> - План работ по продвижению?
+                                    <br> - Напишу сам</label>
+                                <textarea name="message" id="message" placeholder="Ответы сюда:"></textarea>
                             </div>
                             <div class="col-12">
                                 <a href="#contact" class="button large scrolly">Отправить</a>
@@ -612,11 +616,19 @@ https://t.me/seo_up
                     </form>
                 </div>
             </div>
+            <div id="last">
+                <h2>Связаться с нами:</h2>
+                <div class="col-12">
+                    <a href="https://t.me/shilgen_seo" class="button large scrolly">Наш аккаунт</a>
+                    <a href="https://t.me/seo_up" class="button large scrolly">Наш канал</a>
+                </div>
+            </div>
             <ul id="copyright">
                 <li>&copy; Untitled. All rights reserved.</li>
             </ul>
         </div>
     </section>
+
 </footer>
 
 <script src="script.js"></script>
