--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Shilgen SEO</title>
     <meta charset="utf-8"/>
@@ -36,8 +36,8 @@
                         <li>Расскажу, как улучшить сайт до начала работ</li>
                         <li>Помогу выбрать стратегию SEO-продвижения</li>
                     </ul>
-                    <a href="#work" class="button large scrolly">Получить расчет</a>
-                    <a href="#work" class="button large scrolly">Связаться</a>
+                    <a href="#brief" class="button large scrolly">Получить расчет</a>
+                    <a href="#contact" class="button large scrolly">Связаться</a>
                 </div>
             </div>
         </div>
@@ -82,10 +82,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -125,10 +123,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -168,10 +164,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -211,10 +205,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -254,10 +246,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -297,10 +287,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -340,10 +328,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -383,10 +369,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -426,10 +410,8 @@
                     </section>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -519,10 +501,8 @@
                     </article>
                 </div>
             </div>
-            <footer>
-                <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-                <a href="#contact" class="button large scrolly">Get in touch with me</a>
-            </footer>
+            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+            <a href="#contact" class="button large scrolly">Get in touch with me</a>
         </div>
     </section>
 
@@ -558,7 +538,7 @@ https://t.me/seo_up
 -->
 
 <footer>
-    <section id="contact" class="wrapper style4">
+    <section class="contact wrapper style4" id="brief">
         <div class="container medium">
             <h2>Наш бриф</h2>
             <p>Пожалуйста, заполните бриф</p>
@@ -576,7 +556,7 @@ https://t.me/seo_up
                             <div class="col-12">
                                 <input type="text" name="subject" id="subject" placeholder="Ваш telegram" required>
                             </div>
-                            <div class="col-12">
+                            <div class="col-12" id="footer-checkbox">
                                 <label for="link">Пожалуйста, выберите площадки, где размещаетесь:</label>
                                 <div class="checkbox">
                                     <input class="custom-checkbox" type="checkbox" id="color-1" name="color-1"
@@ -603,7 +583,8 @@ https://t.me/seo_up
                                        pattern="\d+|https?://[^\s/$.?#].[^\s]*" required>
                             </div>
                             <div class="col-12">
-                                <label for="message" class="left-label">Что нужно в первую очередь? <br> - Анализ ситуации?
+                                <label for="message" class="left-label">Что нужно в первую очередь? <br> - Анализ
+                                    ситуации?
                                     <br> - Проработать сео?
                                     <br> - План работ по продвижению?
                                     <br> - Напишу сам</label>
@@ -616,21 +597,44 @@ https://t.me/seo_up
                     </form>
                 </div>
             </div>
-            <div id="last">
-                <h2>Связаться с нами:</h2>
-                <div class="col-12">
-                    <a href="https://t.me/shilgen_seo" class="button large scrolly">Наш аккаунт</a>
-                    <a href="https://t.me/seo_up" class="button large scrolly">Наш канал</a>
+        </div>
+    </section>
+    <section class="contact wrapper style4" id="contact">
+        <div class="container medium">
+            <div class="footer-contacts wrapper style4">
+                <div class="footer-left">
+                    <h2>Юридическая информация</h2>
+                    <p>Индивидуальный предприниматель<br>Шилов Геннадий Игоревич</p>
+                    <p>ИНН 330407536152</p>
+                    <p>ОГРНИП 321332800061879</p>
+                    <button>Записаться на консультацию</button>
+                </div>
+                <div class="footer-right">
+                    <h2>Остались вопросы? Спроси лично у меня</h2>
+                    <table>
+                        <tr>
+                            <td class="table-contact">Телеграмм</td>
+                            <td><a href="https://t.me/seo_up">https://t.me/seo_up</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="table-contact">Телефон</td>
+                            <td><a href="tel:89190200649">8-919-020-0649</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="table-contact">E-mail</td>
+                            <td><a href="mailto:admin@shilgen.ru">admin@shilgen.ru</a></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <ul id="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
+                <li>&copy; 2023 <a href="https://ShilGen.ru">ShilGen.ru</a></li>
             </ul>
         </div>
     </section>
-
 </footer>
-
 <script src="script.js"></script>
 </body>
 </html>
