--- a/index.html
+++ b/index.html
@@ -425,17 +425,14 @@
             <div class="pic-card">
                 <h3>The First Thing</h3>
                 <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus
-                    erat
-                    mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                    erat.</p>
             </div>
         </div>
         <div class="card right">
             <a href="#" class="image icon solid fa-code"><img src="images/pic02.jpg" alt=""/></a>
             <div class="pic-card">
                 <h3>The Second Thing</h3>
-                <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus
-                    erat
-                    mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus.</p>
             </div>
         </div>
         <div class="card left">
@@ -443,8 +440,7 @@
             <div class="pic-card">
                 <h3>The Third Thing</h3>
                 <p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus
-                    erat
-                    mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis fusce lacus.</p>
+                    erat.</p>
             </div>
         </div>
     </section>
@@ -507,35 +503,6 @@
     </section>
 
 </main>
-
-
-<!-- Footer -->
-
-
-<!--
-
-Имя
-
-Номер телефона
-
-Телеграмм для связи
-
-на каком (-их) маркетплейсах продаёте или планируете продавать?(ВБ, ОЗОН, Яндекс.маркет)
-
-Артикулы товара для анализа(можно ссылками)?Ссылки на действующие магазины
-
-Что нужно в первую очередь?- анализ ситуации- проработать сео- план работ по продвижению- напишу самТекущая ситуация,
-постановка задачи ( textarea)
-
-Контакты
-
-SEO продвижение WB OZON
-https://t.me/shilgen_seo
-
-Канал SEO продвижение для WB и OZON
-SEO продвижение для WB и OZON
-https://t.me/seo_up
--->
 
 <footer>
     <section class="contact wrapper style4" id="brief">
