--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Shilgen SEO</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <script src="https://kit.fontawesome.com/07452c0fac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body class="is-preload">
@@ -576,6 +577,17 @@
                     <p>ОГРНИП 321332800061879</p>
                     <button>Записаться на консультацию</button>
                 </div>
+
+
+                <!--
+                Вк
+                Тг
+                Вб
+                Вотс апп
+                ВайБер
+                -->
+
+
                 <div class="footer-right">
                     <h2>Остались вопросы? Спроси лично у меня</h2>
                     <table>
