--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
 
     <section id="achievements" class="wrapper style2">
         <div class="container">
-            <header>
-                <h2>Мои достижения</h2>
-                <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-            </header>
+                <h2>Специальное предложение:</h2>
+            <i class="fa-sharp fa-regular fa-bullhorn"></i>
             <div class="row aln-center">
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box style1">
@@ -559,7 +557,7 @@
                                 <textarea name="message" id="message" placeholder="Ответы сюда:"></textarea>
                             </div>
                             <div class="col-12">
-                                <a href="#contact" class="button large scrolly">Отправить</a>
+                                <a class="button large scrolly">Отправить</a>
                             </div>
                         </div>
                     </form>
@@ -575,7 +573,7 @@
                     <p>Индивидуальный предприниматель<br>Шилов Геннадий Игоревич</p>
                     <p>ИНН 330407536152</p>
                     <p>ОГРНИП 321332800061879</p>
-                    <button>Записаться на консультацию</button>
+                    <a href="#brief" class="button large scrolly">Записаться на консультацию</a>
                 </div>
 
 
@@ -593,7 +591,7 @@
                     <table>
                         <tr>
                             <td class="table-contact">Телеграмм</td>
-                            <td><a href="https://t.me/seo_up">https://t.me/seo_up</a>
+                            <td><a href="https://t.me/seo_up">@seo_up</a>
                             </td>
                         </tr>
                         <tr>
@@ -606,6 +604,13 @@
                             <td><a href="mailto:admin@shilgen.ru">admin@shilgen.ru</a></td>
                         </tr>
                     </table>
+                    <div class="social-icons">
+                        <a href="https://vk.com/your_page" class="icon"><img src="images/vk_icon.svg" alt="VK"></a>
+                        <a href="https://t.me/your_page" class="icon"><img src="images/telegram_icon.svg" alt="Telegram"></a>
+                        <a href="https://wa.me/your_number" class="icon"><img src="images/whatsapp_icon.svg" alt="WhatsApp"></a>
+                        <a href="viber://chat?number=your_number" class="icon"><img src="images/viber_icon.svg" alt="Viber"></a>
+                        <a href="https://www.wildberries.ru/your_page" class="icon"><img src="images/wildberries_icon.svg" alt="Wildberries"></a>
+                    </div>
                 </div>
             </div>
             <ul id="copyright">
