--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Shilgen SEO</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-    <script src="https://kit.fontawesome.com/07452c0fac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body class="is-preload">
@@ -24,9 +23,7 @@
     <section id="top" class="wrapper style1">
         <div class="container">
             <div class="row">
-                <div class="col-4 col-5-large col-12-medium">
                     <span class="image fit"><img src="images/pic00.jpg" alt=""/></span>
-                </div>
                 <div class="col-8 col-7-large col-12-medium">
                     <h1 id="header-h1">Привет! Я <strong>Шилов Геннадий</strong>.</h1>
                     <ul class="pluses">
@@ -53,36 +50,15 @@
 
     <section id="achievements" class="wrapper style2">
         <div class="container">
+            <img class="horn" src="images/horn.svg" alt="bullhorn">
                 <h2>Специальное предложение:</h2>
-            <i class="fa-sharp fa-regular fa-bullhorn"></i>
             <div class="row aln-center">
-                <div class="col-4 col-6-medium col-12-small">
                     <section class="box style1">
-                        <span class="icon featured fa-comments"></span>
-                        <h3>Consequat lorem</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
+                        <h3>Изучу Ваш сайт до начала работ</h3>
+                        <p>Проведу анализ. Расскажу, что улучшить.</p>
+                        <p>Назову 10 пунктов юзабилити аудита абсолютно бесплатно</p>
                     </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box style1">
-                        <span class="icon solid featured fa-camera-retro"></span>
-                        <h3>Lorem dolor tempus</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box style1">
-                        <span class="icon featured fa-thumbs-up"></span>
-                        <h3>Feugiat posuere</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
-                    </section>
-                </div>
             </div>
-            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
