--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="nav">
         <ul class="container">
             <li><a href="#top">Обо мне</a></li>
-            <li><a href="#work">Работы</a></li>
+            <li><a href="#promotion">Акции</a></li>
             <li><a href="#portfolio">Портфолио</a></li>
             <li><a href="#contact">Контакты</a></li>
         </ul>
@@ -34,7 +34,7 @@
                         <li>Расскажу, как улучшить сайт до начала работ</li>
                         <li>Помогу выбрать стратегию SEO-продвижения</li>
                     </ul>
-                    <a href="#brief" class="button large scrolly">Получить расчет</a>
+                    <br><a href="#brief" class="button large scrolly">Получить расчет</a>
                         <a href="#contact" class="button large scrolly">Связаться</a>
                 </div>
             </div>
@@ -48,12 +48,12 @@
 
     <!-- Блок 1 -->
 
-    <section id="achievements" class="wrapper style2">
-        <div class="container">
+    <section id="promotion" class="wrapper style2">
+        <div id="promotion-row" class="container">
             <img class="horn" src="images/horn.svg" alt="bullhorn">
                 <h2>Специальное предложение:</h2>
-            <div class="row aln-center">
-                    <section class="box style1">
+            <div  class="row aln-center">
+                    <section id="promotion-box" class="box style1">
                         <h3>Изучу Ваш сайт до начала работ</h3>
                         <p>Проведу анализ. Расскажу, что улучшить.</p>
                         <p>Назову 10 пунктов юзабилити аудита абсолютно бесплатно</p>
