--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="top" class="wrapper style1">
         <div class="container">
             <div class="row">
-                    <span class="image fit"><img src="images/pic00.jpg" alt=""/></span>
+                <span class="image fit"><img src="images/pic00.jpg" alt=""/></span>
                 <div id="header-li" class="col-8 col-7-large col-12-medium">
                     <h1 id="header-h1">Привет! Я <strong>Шилов Геннадий</strong>.</h1>
                     <ul class="pluses">
@@ -35,7 +35,7 @@
                         <li>Помогу выбрать стратегию SEO-продвижения</li>
                     </ul>
                     <br><a href="#brief" class="button large scrolly">Получить расчет</a>
-                        <a href="#contact" class="button large scrolly">Связаться</a>
+                    <a href="#contact" class="button large scrolly">Связаться</a>
                 </div>
             </div>
         </div>
@@ -51,13 +51,16 @@
     <section id="promotion" class="wrapper style2">
         <div id="promotion-row" class="container">
             <img class="horn" src="images/horn.svg" alt="bullhorn">
-                <h2>Специальное предложение:</h2>
-            <div  class="row aln-center">
-                    <section id="promotion-box" class="box style1">
+            <h2>Специальное предложение:</h2>
+            <div class="row aln-center">
+                <section id="promotion-box" class="box style1">
+                    <div>
                         <h3>Изучу Ваш сайт до начала работ</h3>
                         <p>Проведу анализ. Расскажу, что улучшить.</p>
-                        <p>Назову 10 пунктов юзабилити аудита абсолютно бесплатно</p>
-                    </section>
+                        <p>Назову 10 пунктов юзабилити аудита <strong>абсолютно бесплатно</strong></p>
+                    </div>
+                    <img src="images/promotion.svg">
+                </section>
             </div>
         </div>
     </section>
@@ -582,10 +585,14 @@
                     </table>
                     <div class="social-icons">
                         <a href="https://vk.com/your_page" class="icon"><img src="images/vk_icon.svg" alt="VK"></a>
-                        <a href="https://t.me/your_page" class="icon"><img src="images/telegram_icon.svg" alt="Telegram"></a>
-                        <a href="https://wa.me/your_number" class="icon"><img src="images/whatsapp_icon.svg" alt="WhatsApp"></a>
-                        <a href="viber://chat?number=your_number" class="icon"><img src="images/viber_icon.svg" alt="Viber"></a>
-                        <a href="https://www.wildberries.ru/your_page" class="icon"><img src="images/wildberries_icon.svg" alt="Wildberries"></a>
+                        <a href="https://t.me/your_page" class="icon"><img src="images/telegram_icon.svg"
+                                                                           alt="Telegram"></a>
+                        <a href="https://wa.me/your_number" class="icon"><img src="images/whatsapp_icon.svg"
+                                                                              alt="WhatsApp"></a>
+                        <a href="viber://chat?number=your_number" class="icon"><img src="images/viber_icon.svg"
+                                                                                    alt="Viber"></a>
+                        <a href="https://www.wildberries.ru/your_page" class="icon"><img
+                                src="images/wildberries_icon.svg" alt="Wildberries"></a>
                     </div>
                 </div>
             </div>
