--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     <!-- Блок 1 -->
 
     <section id="promotion" class="wrapper style2">
-        <div id="promotion-row" class="container">
+        <div id="promotion-row" class="container wide-row">
             <img class="horn" src="images/horn.svg" alt="bullhorn">
             <h2>Специальное предложение:</h2>
             <div class="row aln-center">
-                <section id="promotion-box" class="box style1">
+                <section id="promotion-box" class="box style1 wide-box">
                     <div>
                         <h3>Изучу Ваш сайт до начала работ</h3>
                         <p>Проведу анализ. Расскажу, что улучшить.</p>
                         <p>Назову 10 пунктов юзабилити аудита <strong>абсолютно бесплатно</strong></p>
                     </div>
-                    <img src="images/promotion.svg">
+                    <img class="promotion-svg" src="images/promotion.svg">
                 </section>
             </div>
         </div>
@@ -69,40 +69,12 @@
     <!-- Блок 2 -->
 
 
-    <section id="cases" class="wrapper style2">
-        <div class="container">
-            <header>
-                <h2>Кейсы</h2>
-                <p>Odio turpis amet sed consequat eget posuere consequat.</p>
-            </header>
+    <section id="steps" class="wrapper style2">
+        <div id="steps-row" class="container wide-row">
+            <h2>Как проходит работа (шаги)</h2>
             <div class="row aln-center">
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box style1">
-                        <span class="icon featured fa-comments"></span>
-                        <h3>Consequat lorem</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box style1">
-                        <span class="icon solid featured fa-camera-retro"></span>
-                        <h3>Lorem dolor tempus</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box style1">
-                        <span class="icon featured fa-thumbs-up"></span>
-                        <h3>Feugiat posuere</h3>
-                        <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem
-                            dolore.</p>
-                    </section>
-                </div>
+
             </div>
-            <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-            <a href="#portfolio" class="button large scrolly">See some of my recent work</a>
         </div>
     </section>
 
@@ -151,7 +123,7 @@
     <!-- Блок 4 -->
 
 
-    <section id="steps" class="wrapper style2">
+    <section id="cases" class="wrapper style2">
         <div class="container">
             <header>
                 <h2>Шаги работы:</h2>
