--- a/index.html
+++ b/index.html
@@ -69,11 +69,47 @@
     <!-- Блок 2 -->
 
 
+    <!-- Items -->
     <section id="steps" class="wrapper style2">
         <div id="steps-row" class="container wide-row">
             <h2>Как проходит работа (шаги)</h2>
             <div class="row aln-center">
-
+                <div>
+                    <img class="promotion-svg" src="images/steps/1celi.svg">
+                    <p>Определить цели</p>
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/right.svg">
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/2brif.svg">
+                    <p>Проверка заявки и составление плана работ</p>
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/right.svg">
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/3sloimost.svg">
+                    <p>Прогноз стоимости и оплата услуг</p>
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/4vypolnenie.svg">
+                    <p>Выполнение работ по проекту SEO-специалистом</p>
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/right.svg">
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/5otchet.svg">
+                    <p>Отчет о выполненной работе SEO-специалистом</p>
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/right.svg">
+                </div>
+                <div>
+                    <img class="promotion-svg" src="images/steps/6oplata.svg">
+                    <p>Переход к следующему этапу</p>
+                </div>
             </div>
         </div>
     </section>
