--- a/index.html
+++ b/index.html
@@ -74,41 +74,17 @@
         <div id="steps-row" class="container wide-row">
             <h2>Как проходит работа (шаги)</h2>
             <div class="row aln-center">
-                <div>
-                    <img class="promotion-svg" src="images/steps/1celi.svg">
-                    <p>Определить цели</p>
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/right.svg">
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/2brif.svg">
-                    <p>Проверка заявки и составление плана работ</p>
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/right.svg">
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/3sloimost.svg">
-                    <p>Прогноз стоимости и оплата услуг</p>
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/4vypolnenie.svg">
-                    <p>Выполнение работ по проекту SEO-специалистом</p>
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/right.svg">
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/5otchet.svg">
-                    <p>Отчет о выполненной работе SEO-специалистом</p>
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/right.svg">
-                </div>
-                <div>
-                    <img class="promotion-svg" src="images/steps/6oplata.svg">
-                    <p>Переход к следующему этапу</p>
+                <div class="my-flex-cont">
+                    <div class="my-flex-box">Блок 1</div>
+                    <div class="my-flex-box">Блок 2</div>
+                    <div class="my-flex-box">Блок 3</div>
+                    <div class="my-flex-box">Блок 4</div>
+                    <div class="my-flex-box">Блок 5</div>
+                    <div class="my-flex-box">Блок 6</div>
+                    <div class="my-flex-box">Блок 7</div>
+                    <div class="my-flex-box">Блок 8</div>
+                    <div class="my-flex-box">Блок 9</div>
+                    <div class="my-flex-box">Блок 10</div>
                 </div>
             </div>
         </div>
